aggregate daily copernicus

--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -25,7 +25,10 @@
     "from datetime import datetime\n",
     "from CopernicusQueryBuilder import CopernicusQueryBuilder\n",
     "\n",
-    "os.chdir(os.path.dirname(os.path.abspath(__file__)))\n",
+    "try:\n",
+    "    os.chdir(os.path.dirname(os.path.abspath(__file__)))\n",
+    "except:\n",
+    "    pass\n",
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService"
    ]
@@ -54,11 +57,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_WORKERS = 12  # The number of workers we want to employ (maximum is 16 as per the number of cores)\n",
+    "NUM_WORKERS = 1  # The number of workers we want to employ (maximum is 16 as per the number of cores)\n",
     "REQ_DELAY = 60  # 1 minute - the base delay required to bypass pulling limits\n",
-    "MIN_DELAY = 60  # 1 minute - once added to the required delay, creates a minimum delay of 5 minutes to bypass pulling limits\n",
+    "MIN_DELAY = 20  # 1 minute - once added to the required delay, creates a minimum delay of 5 minutes to bypass pulling limits\n",
     "MAX_DELAY = 180  # 3 minutes - once added to the required delay, creates a maximum delay of 5 minutes to bypass pulling limits\n",
-    "TABLE = \"copernicus_satellite_data\"\n",
+    "TABLE = \"agg_day_copernicus_satellite_data\"\n",
     "\n",
     "MIN_MONTH = 1\n",
     "MAX_MONTH = 12\n",
@@ -168,11 +171,9 @@
     "            df.at[index, \"year\"] = date.year\n",
     "            df.at[index, \"month\"] = date.month\n",
     "            df.at[index, \"day\"] = date.day\n",
-    "            df.at[index, \"hour\"] = date.hour\n",
     "\n",
-    "        df[[\"year\", \"month\", \"day\", \"hour\"]] = df[\n",
-    "            [\"year\", \"month\", \"day\", \"hour\"]\n",
-    "        ].astype(int)\n",
+    "        df[[\"year\", \"month\", \"day\"]] = df[[\"year\", \"month\", \"day\"]].astype(int)\n",
+    "        df.drop(columns=[\"datetime\"], inplace=True)\n",
     "    except Exception as e:\n",
     "        updateLog(ERROR_FILE, f\"Error adding date attributes {e}\\n\")\n",
     "\n",
@@ -197,7 +198,7 @@
     "    # Join the two dataframes based on which points fit within what agriculture regions\n",
     "    df = gpd.sjoin(df, agRegions, how=\"left\", predicate=\"within\")\n",
     "\n",
-    "    df.drop(columns=[\"geometry\", \"index_right\"], inplace=True)\n",
+    "    df.drop(columns=[\"geometry\", \"index_right\", \"lat\", \"lon\"], inplace=True)\n",
     "    df = df[df[\"cr_num\"].notna()]  # Take rows that are valid numbers\n",
     "    df[[\"cr_num\"]] = df[[\"cr_num\"]].astype(int)\n",
     "    df[[\"car_uid\"]] = df[[\"car_uid\"]].astype(int)\n",
@@ -250,7 +251,6 @@
     "        df[\"year\"] = None\n",
     "        df[\"month\"] = None\n",
     "        df[\"day\"] = None\n",
-    "        df[\"hour\"] = None\n",
     "\n",
     "        # Renames the dataframes columns so it can be matched when its posted to the database\n",
     "        df.rename(columns={\"longitude\": \"lon\"}, inplace=True)\n",
@@ -316,6 +316,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pandas import Index\n",
+    "\n",
+    "\n",
+    "def generateDailyAggregate(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    try:\n",
+    "        aggregate = (\n",
+    "            df.groupby([\"year\", \"month\", \"day\", \"cr_num\", \"car_uid\"])\n",
+    "            .agg(\n",
+    "                {\n",
+    "                    \"dewpoint_temperature\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"temperature\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"evaporation_from_bare_soil\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"skin_reservoir_content\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"skin_temperature\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"snowmelt\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"soil_temperature_level_1\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"soil_temperature_level_2\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"soil_temperature_level_3\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"soil_temperature_level_4\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"surface_net_solar_radiation\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"surface_pressure\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"volumetric_soil_water_layer_1\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"volumetric_soil_water_layer_2\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"volumetric_soil_water_layer_3\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"volumetric_soil_water_layer_4\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"leaf_area_index_high_vegetation\": [\"min\", \"max\", \"mean\"],\n",
+    "                    \"leaf_area_index_low_vegetation\": [\"min\", \"max\", \"mean\"],\n",
+    "                }\n",
+    "            )\n",
+    "            .reset_index()\n",
+    "        )\n",
+    "\n",
+    "        columns = [\n",
+    "            \"min_dewpoint_temperature\",\n",
+    "            \"max_dewpoint_temperature\",\n",
+    "            \"mean_dewpoint_temperature\",\n",
+    "            \"min_temperature\",\n",
+    "            \"max_temperature\",\n",
+    "            \"mean_temperature\",\n",
+    "            \"min_evaporation_from_bare_soil\",\n",
+    "            \"max_evaporation_from_bare_soil\",\n",
+    "            \"mean_evaporation_from_bare_soil\",\n",
+    "            \"min_skin_reservoir_content\",\n",
+    "            \"max_skin_reservoir_content\",\n",
+    "            \"mean_skin_reservoir_content\",\n",
+    "            \"min_skin_temperature\",\n",
+    "            \"max_skin_temperature\",\n",
+    "            \"mean_skin_temperature\",\n",
+    "            \"min_snowmelt\",\n",
+    "            \"max_snowmelt\",\n",
+    "            \"mean_snowmelt\",\n",
+    "            \"min_soil_temperature_level_1\",\n",
+    "            \"max_soil_temperature_level_1\",\n",
+    "            \"mean_soil_temperature_level_1\",\n",
+    "            \"min_soil_temperature_level_2\",\n",
+    "            \"max_soil_temperature_level_2\",\n",
+    "            \"mean_soil_temperature_level_2\",\n",
+    "            \"min_soil_temperature_level_3\",\n",
+    "            \"max_soil_temperature_level_3\",\n",
+    "            \"mean_soil_temperature_level_3\",\n",
+    "            \"min_soil_temperature_level_4\",\n",
+    "            \"max_soil_temperature_level_4\",\n",
+    "            \"mean_soil_temperature_level_4\",\n",
+    "            \"min_surface_net_solar_radiation\",\n",
+    "            \"max_surface_net_solar_radiation\",\n",
+    "            \"mean_surface_net_solar_radiation\",\n",
+    "            \"min_surface_pressure\",\n",
+    "            \"max_surface_pressure\",\n",
+    "            \"mean_surface_pressure\",\n",
+    "            \"min_volumetric_soil_water_layer_1\",\n",
+    "            \"max_volumetric_soil_water_layer_1\",\n",
+    "            \"mean_volumetric_soil_water_layer_1\",\n",
+    "            \"min_volumetric_soil_water_layer_2\",\n",
+    "            \"max_volumetric_soil_water_layer_2\",\n",
+    "            \"mean_volumetric_soil_water_layer_2\",\n",
+    "            \"min_volumetric_soil_water_layer_3\",\n",
+    "            \"max_volumetric_soil_water_layer_3\",\n",
+    "            \"mean_volumetric_soil_water_layer_3\",\n",
+    "            \"min_volumetric_soil_water_layer_4\",\n",
+    "            \"max_volumetric_soil_water_layer_4\",\n",
+    "            \"mean_volumetric_soil_water_layer_4\",\n",
+    "            \"min_leaf_area_index_high_vegetation\",\n",
+    "            \"max_leaf_area_index_high_vegetation\",\n",
+    "            \"mean_leaf_area_index_high_vegetation\",\n",
+    "            \"min_leaf_area_index_low_vegetation\",\n",
+    "            \"max_leaf_area_index_low_vegetation\",\n",
+    "            \"mean_leaf_area_index_low_vegetation\",\n",
+    "        ]\n",
+    "        all_columns = [\n",
+    "            \"year\",\n",
+    "            \"month\",\n",
+    "            \"day\",\n",
+    "            \"cr_num\",\n",
+    "            \"car_uid\",\n",
+    "        ]\n",
+    "        all_columns.extend(columns)\n",
+    "        aggregate.columns = Index(all_columns)\n",
+    "        aggregate[columns] = aggregate[columns].astype(float)\n",
+    "    except Exception as e:\n",
+    "        updateLog(ERROR_FILE, f\"Error generating daily aggregate {e}\\n\")\n",
+    "\n",
+    "    return aggregate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def pullSatelliteData(\n",
     "    agRegions: gpd.GeoDataFrame,\n",
     "    delay: int,\n",
@@ -324,6 +434,10 @@
     "    days: list,\n",
     "    outputFile: str,\n",
     "):\n",
+    "    try:\n",
+    "        os.chdir(os.path.dirname(os.path.abspath(__file__)))\n",
+    "    except:\n",
+    "        pass\n",
     "    if (\n",
     "        PG_DB is None\n",
     "        or PG_ADDR is None\n",
@@ -382,11 +496,13 @@
     "            df = addDateAttrs(df)\n",
     "            updateLog(LOG_FILE, f\"Added date attributes for {year}/{month}/{currDay}\\n\")\n",
     "\n",
+    "            df = generateDailyAggregate(df)\n",
+    "\n",
     "            updateLog(\n",
     "                LOG_FILE,\n",
     "                f\"Adding rows {len(df.index)} data from {year}/{month}/{currDay} to the Database\\n\",\n",
     "            )\n",
-    "            df.drop(columns=[\"index\"], inplace=True)\n",
+    "            # df.drop(columns=[\"index\"], inplace=True)\n",
     "            df.to_sql(TABLE, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
     "        except Exception as e:\n",
     "            updateLog(\n",
@@ -424,7 +540,6 @@
     "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "    queryHandler = CopernicusQueryBuilder()\n",
     "    jobArgs = []  # Holds tuples of arguments for pooled workers\n",
-    "    count = 1  # Used to calculate the delay for each worker\n",
     "\n",
     "    conn = db.connect()  # Connect to the database\n",
     "    queryHandler.createCopernicusTableReq(db)\n",
@@ -440,10 +555,7 @@
     "            numDays = calendar.monthrange(int(year), int(month))[1]\n",
     "\n",
     "            # calculates a random delay (asc for groups of 12)\n",
-    "            delay = (count % NUM_WORKERS != 0) * (\n",
-    "                REQ_DELAY * (count % NUM_WORKERS) + random.randint(MIN_DELAY, MAX_DELAY)\n",
-    "            )\n",
-    "            count += 1\n",
+    "            delay = random.randint(MIN_DELAY, MAX_DELAY)\n",
     "\n",
     "            days = [str(day) for day in range(1, numDays + 1)]\n",
     "            outputFile = f\"data/copernicus_{year}_{month}\"\n",
