--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -451,13 +451,14 @@
     "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "    time.sleep(delay)\n",
     "\n",
-    "    updateLog(LOG_FILE, f\"Starting to pull data for {year}/{month}\\n\")\n",
     "    conn = db.connect()\n",
     "    c = cdsapi.Client()\n",
     "\n",
     "    for currDay in days:\n",
     "        currFile = f\"{outputFile}_{currDay}\"\n",
     "        try:\n",
+    "            starttime = datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
+    "            updateLog(LOG_FILE, f\"{starttime} Starting to pull data for {year}/{month}/{currDay}\\n\")\n",
     "            c.retrieve(\n",
     "                \"reanalysis-era5-land\",\n",
     "                {\n",
@@ -504,6 +505,10 @@
     "            )\n",
     "            # df.drop(columns=[\"index\"], inplace=True)\n",
     "            df.to_sql(TABLE, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "            updateLog(\n",
+    "                LOG_FILE,\n",
+    "                f\"{starttime} Finished data pull from {year}/{month}/{currDay}\\n\",\n",
+    "            )\n",
     "        except Exception as e:\n",
     "            updateLog(\n",
     "                ERROR_FILE, f\"Error pulling data for {year}/{month}/{currDay} : {e}\\n\"\n",
@@ -517,7 +522,7 @@
     "            updateLog(ERROR_FILE, f\"Error cleaning up {year}/{month}/{currDay} : {e}\\n\")\n",
     "\n",
     "    db.cleanup()\n",
-    "    updateLog(LOG_FILE, f\"Finished adding data from {year}/{month} to the Database\\n\")"
+    "    updateLog(LOG_FILE, f\"Finished adding {year}/{month} to the Database\\n\")"
    ]
   },
   {
