--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -458,7 +458,10 @@
     "        currFile = f\"{outputFile}_{currDay}\"\n",
     "        try:\n",
     "            starttime = datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
-    "            updateLog(LOG_FILE, f\"{starttime} Starting to pull data for {year}/{month}/{currDay}\\n\")\n",
+    "            updateLog(\n",
+    "                LOG_FILE,\n",
+    "                f\"{starttime} Starting to pull data for {year}/{month}/{currDay}\\n\",\n",
+    "            )\n",
     "            c.retrieve(\n",
     "                \"reanalysis-era5-land\",\n",
     "                {\n",
