Added legends to charts
Added legends to charts

--- a/src/WeatherStation/StationVisualization.ipynb
+++ b/src/WeatherStation/StationVisualization.ipynb
@@ -11,6 +11,7 @@
     "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
     "from matplotlib import pyplot as plt  # type: ignore\n",
+    "import matplotlib.patches as mpatches  # type: ignore\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "sys.path.append(\"../\")\n",
@@ -159,13 +160,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hourly = mpatches.Patch(color=\"black\", label=\"Houly stations (larger)\")\n",
+    "daily = mpatches.Patch(color=\"red\", label=\"Daily stations (smaller)\")\n",
+    "stations = mpatches.Patch(color=\"red\", label=\"Stations\")\n",
+    "\n",
+    "hasLessThan5Col = \"white\"\n",
+    "hasLessThan10Col = \"pink\"\n",
+    "hasLessThan15Col = \"red\"\n",
+    "hasLessThan20Col = \"maroon\"\n",
+    "hasMoreThan20Col = \"black\"\n",
+    "\n",
+    "hasLessThan5Yrs = mpatches.Patch(\n",
+    "    color=hasLessThan5Col, label=\"Less than 5 years of data\"\n",
+    ")\n",
+    "hasLessThan10Yrs = mpatches.Patch(\n",
+    "    color=hasLessThan10Col, label=\"Less than 10 years of data\"\n",
+    ")\n",
+    "hasLessThan15Yrs = mpatches.Patch(\n",
+    "    color=hasLessThan15Col, label=\"Less than 15 years of data\"\n",
+    ")\n",
+    "hasLessThan20Yrs = mpatches.Patch(\n",
+    "    color=hasLessThan20Col, label=\"Less than 20 years of data\"\n",
+    ")\n",
+    "hasMoreThan20Yrs = mpatches.Patch(\n",
+    "    color=hasMoreThan20Col, label=\"More than 20 years of data\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "minx, miny, maxx, maxy = agRegions.total_bounds\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.set_ylim(miny, maxy)\n",
     "ax.set_xlim(minx, maxx)\n",
     "ax.set_title(\"All Daily Stations\")\n",
     "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
-    "allDlyStations.plot(ax=ax, color=\"red\", markersize=10)"
+    "allDlyStations.plot(ax=ax, color=\"red\", markersize=10)\n",
+    "plt.legend(handles=[stations], fontsize=\"30\")"
    ]
   },
   {
@@ -180,7 +215,8 @@
     "ax.set_xlim(minx, maxx)\n",
     "ax.set_title(\"All Hourly Stations\")\n",
     "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
-    "allHlyStations.plot(ax=ax, color=\"red\", markersize=10)"
+    "allHlyStations.plot(ax=ax, color=\"red\", markersize=10)\n",
+    "plt.legend(handles=[stations], fontsize=\"30\")"
    ]
   },
   {
@@ -193,10 +229,11 @@
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.set_ylim(miny, maxy)\n",
     "ax.set_xlim(minx, maxx)\n",
-    "ax.set_title(\"All Daily and Hourly Stations (black is hourly, red is daily)\")\n",
+    "ax.set_title(\"All Daily and Hourly Stations\")\n",
     "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
     "allHlyStations.plot(ax=ax, color=\"black\", markersize=25)\n",
-    "allDlyStations.plot(ax=ax, color=\"red\", markersize=5)"
+    "allDlyStations.plot(ax=ax, color=\"red\", markersize=5)\n",
+    "plt.legend(handles=[hourly, daily], fontsize=\"30\")"
    ]
   },
   {
@@ -209,10 +246,11 @@
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.set_ylim(miny, maxy)\n",
     "ax.set_xlim(minx, maxx)\n",
-    "ax.set_title(\"Restricted Daily and Hourly Stations (black is hourly, red is daily)\")\n",
+    "ax.set_title(\"Restricted Daily and Hourly Stations\")\n",
     "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
     "dlyStations.plot(ax=ax, color=\"black\", markersize=25)\n",
-    "hlyStations.plot(ax=ax, color=\"red\", markersize=5)"
+    "hlyStations.plot(ax=ax, color=\"red\", markersize=5)\n",
+    "plt.legend(handles=[hourly, daily], fontsize=\"30\")"
    ]
   },
   {
@@ -221,14 +259,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activeDlyStations = gpd.GeoDataFrame(dlyStations)\n",
-    "activeHlyStations = gpd.GeoDataFrame(hlyStations)\n",
-    "\n",
-    "activeDlyStations.drop(\n",
-    "    activeDlyStations[activeDlyStations[\"max\"] != 2022].index, inplace=True\n",
+    "activeDlyStations = gpd.GeoDataFrame(\n",
+    "    dlyStations.drop(dlyStations[dlyStations[\"max\"] != 2022].index)\n",
     ")\n",
-    "activeHlyStations.drop(\n",
-    "    activeHlyStations[activeHlyStations[\"max\"] != 2022].index, inplace=True\n",
+    "activeHlyStations = gpd.GeoDataFrame(\n",
+    "    hlyStations.drop(hlyStations[hlyStations[\"max\"] != 2022].index)\n",
     ")"
    ]
   },
@@ -242,10 +277,12 @@
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.set_ylim(miny, maxy)\n",
     "ax.set_xlim(minx, maxx)\n",
-    "ax.set_title(\"Active Daily and Hourly Stations (black is hourly, red is daily)\")\n",
-    "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
+    "ax.set_title(\"Active Daily and Hourly Stations\")\n",
+    "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\", label=5)\n",
     "activeHlyStations.plot(ax=ax, color=\"black\", markersize=25)\n",
-    "activeDlyStations.plot(ax=ax, color=\"red\", markersize=5)"
+    "activeDlyStations.plot(ax=ax, color=\"red\", markersize=5)\n",
+    "\n",
+    "plt.legend(handles=[hourly, daily], fontsize=\"30\")"
    ]
   },
   {
@@ -258,13 +295,7 @@
     "coloredHlyStations = gpd.GeoDataFrame(hlyStations)\n",
     "\n",
     "coloredDlyStations[\"color\"] = None\n",
-    "coloredHlyStations[\"color\"] = None\n",
-    "\n",
-    "hasLessThan5 = \"white\"\n",
-    "hasLessThan10 = \"pink\"\n",
-    "hasLessThan15 = \"red\"\n",
-    "hasLessThan20 = \"maroon\"\n",
-    "hasMoreThan20 = \"black\""
+    "coloredHlyStations[\"color\"] = None"
    ]
   },
   {
@@ -277,15 +308,15 @@
     "    numYrs = lastYear - firstYear\n",
     "\n",
     "    if numYrs <= 5:\n",
-    "        df.at[index, \"color\"] = hasLessThan5\n",
+    "        df.at[index, \"color\"] = hasLessThan5Col\n",
     "    elif numYrs <= 10:\n",
-    "        df.at[index, \"color\"] = hasLessThan10\n",
+    "        df.at[index, \"color\"] = hasLessThan10Col\n",
     "    elif numYrs <= 15:\n",
-    "        df.at[index, \"color\"] = hasLessThan15\n",
+    "        df.at[index, \"color\"] = hasLessThan15Col\n",
     "    elif numYrs <= 20:\n",
-    "        df.at[index, \"color\"] = hasLessThan20\n",
+    "        df.at[index, \"color\"] = hasLessThan20Col\n",
     "    else:\n",
-    "        df.at[index, \"color\"] = hasMoreThan20"
+    "        df.at[index, \"color\"] = hasMoreThan20Col"
    ]
   },
   {
@@ -311,9 +342,19 @@
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.set_ylim(miny, maxy)\n",
     "ax.set_xlim(minx, maxx)\n",
-    "ax.set_title(\"Number of Years of Data for Daily Stations (darker means more)\")\n",
+    "ax.set_title(\"Number of Years of Data for Daily Stations\")\n",
     "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
-    "coloredDlyStations.plot(ax=ax, color=coloredDlyStations[\"color\"], markersize=20)"
+    "coloredDlyStations.plot(ax=ax, color=coloredDlyStations[\"color\"], markersize=20)\n",
+    "plt.legend(\n",
+    "    handles=[\n",
+    "        hasLessThan5Yrs,\n",
+    "        hasLessThan10Yrs,\n",
+    "        hasLessThan15Yrs,\n",
+    "        hasLessThan20Yrs,\n",
+    "        hasMoreThan20Yrs,\n",
+    "    ],\n",
+    "    fontsize=\"30\",\n",
+    ")"
    ]
   },
   {
@@ -328,7 +369,17 @@
     "ax.set_xlim(minx, maxx)\n",
     "ax.set_title(\"Number of Years of Data for Hourly Stations (darker means more)\")\n",
     "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
-    "coloredHlyStations.plot(ax=ax, color=coloredHlyStations[\"color\"], markersize=20)"
+    "coloredHlyStations.plot(ax=ax, color=coloredHlyStations[\"color\"], markersize=20)\n",
+    "plt.legend(\n",
+    "    handles=[\n",
+    "        hasLessThan5Yrs,\n",
+    "        hasLessThan10Yrs,\n",
+    "        hasLessThan15Yrs,\n",
+    "        hasLessThan20Yrs,\n",
+    "        hasMoreThan20Yrs,\n",
+    "    ],\n",
+    "    fontsize=\"30\",\n",
+    ")"
    ]
   },
   {
@@ -341,12 +392,22 @@
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.set_ylim(miny, maxy)\n",
     "ax.set_xlim(minx, maxx)\n",
-    "ax.set_title(\n",
-    "    \"Number of Years of Data for Daily and Hourly Stations (darker means more, hly is larger, dly is smaller)\"\n",
-    ")\n",
+    "ax.set_title(\"Number of Years of Data for Daily and Hourly Stations\")\n",
     "agRegions.plot(ax=ax, color=agRegions[\"color\"], edgecolor=\"black\")\n",
-    "coloredHlyStations.plot(ax=ax, color=coloredHlyStations[\"color\"], markersize=55)\n",
-    "coloredDlyStations.plot(ax=ax, color=coloredDlyStations[\"color\"], markersize=5)"
+    "coloredHlyStations.plot(ax=ax, color=coloredHlyStations[\"color\"], markersize=25)\n",
+    "coloredDlyStations.plot(ax=ax, color=coloredDlyStations[\"color\"], markersize=5)\n",
+    "plt.legend(\n",
+    "    title=\"Hourly Stations are Larger, Daily Stations are Smaller\",\n",
+    "    title_fontsize=\"20\",\n",
+    "    handles=[\n",
+    "        hasLessThan5Yrs,\n",
+    "        hasLessThan10Yrs,\n",
+    "        hasLessThan15Yrs,\n",
+    "        hasLessThan20Yrs,\n",
+    "        hasMoreThan20Yrs,\n",
+    "    ],\n",
+    "    fontsize=\"30\",\n",
+    ")"
    ]
   },
   {
@@ -367,38 +428,38 @@
     "\n",
     "print(\"The following statistics describe the restricted set of weather stations:\")\n",
     "print(\n",
-    "    f'\\tNumber of hourly stations with at least 5 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan5])}'\n",
+    "    f'\\tNumber of hourly stations with at least 5 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan5Col])}'\n",
     ")\n",
     "print(\n",
-    "    f'\\tNumber of daily stations with at least 5 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan5])}\\n'\n",
-    ")\n",
-    "\n",
-    "print(\n",
-    "    f'\\tNumber of hourly stations with at least 10 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan10])}'\n",
-    ")\n",
-    "print(\n",
-    "    f'\\tNumber of daily stations with at least 10 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan10])}\\n'\n",
+    "    f'\\tNumber of daily stations with at least 5 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan5Col])}\\n'\n",
     ")\n",
     "\n",
     "print(\n",
-    "    f'\\tNumber of hourly stations with at least 15 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan15])}'\n",
+    "    f'\\tNumber of hourly stations with at least 10 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan10Col])}'\n",
     ")\n",
     "print(\n",
-    "    f'\\tNumber of daily stations with at least 15 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan15])}\\n'\n",
-    ")\n",
-    "\n",
-    "print(\n",
-    "    f'\\tNumber of hourly stations with at least 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan20])}'\n",
-    ")\n",
-    "print(\n",
-    "    f'\\tNumber of daily stations with at least 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan20])}\\n'\n",
+    "    f'\\tNumber of daily stations with at least 10 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan10Col])}\\n'\n",
     ")\n",
     "\n",
     "print(\n",
-    "    f'\\tNumber of hourly stations with more than 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasMoreThan20])}'\n",
+    "    f'\\tNumber of hourly stations with at least 15 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan15Col])}'\n",
     ")\n",
     "print(\n",
-    "    f'\\tNumber of daily stations with more than 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasMoreThan20])}\\n'\n",
+    "    f'\\tNumber of daily stations with at least 15 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan15Col])}\\n'\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    f'\\tNumber of hourly stations with at least 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan20Col])}'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\tNumber of daily stations with at least 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan20Col])}\\n'\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    f'\\tNumber of hourly stations with more than 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasMoreThan20Col])}'\n",
+    ")\n",
+    "print(\n",
+    "    f'\\tNumber of daily stations with more than 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasMoreThan20Col])}\\n'\n",
     ")\n",
     "\n",
     "print(\n",
@@ -441,38 +502,38 @@
     "\n",
     "    print(\"\\tThe following statistics describe the restricted set of weather stations:\")\n",
     "    print(\n",
-    "        f'\\t\\tNumber of hourly stations with at least 5 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasLessThan5) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
+    "        f'\\t\\tNumber of hourly stations with at least 5 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasLessThan5Col) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
     "    )\n",
     "    print(\n",
-    "        f'\\t\\tNumber of daily stations with at least 5 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasLessThan5) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
-    "    )\n",
-    "\n",
-    "    print(\n",
-    "        f'\\t\\tNumber of hourly stations with at least 10 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasLessThan10) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
-    "    )\n",
-    "    print(\n",
-    "        f'\\t\\tNumber of daily stations with at least 10 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasLessThan10) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
+    "        f'\\t\\tNumber of daily stations with at least 5 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasLessThan5Col) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
     "    )\n",
     "\n",
     "    print(\n",
-    "        f'\\t\\tNumber of hourly stations with at least 15 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasLessThan15) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
+    "        f'\\t\\tNumber of hourly stations with at least 10 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasLessThan10Col) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
     "    )\n",
     "    print(\n",
-    "        f'\\t\\tNumber of daily stations with at least 15 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasLessThan15) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
-    "    )\n",
-    "\n",
-    "    print(\n",
-    "        f'\\t\\tNumber of hourly stations with at least 20 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasLessThan20) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
-    "    )\n",
-    "    print(\n",
-    "        f'\\t\\tNumber of daily stations with at least 20 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasLessThan20) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
+    "        f'\\t\\tNumber of daily stations with at least 10 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasLessThan10Col) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
     "    )\n",
     "\n",
     "    print(\n",
-    "        f'\\t\\tNumber of hourly stations with more than 20 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasMoreThan20) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
+    "        f'\\t\\tNumber of hourly stations with at least 15 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasLessThan15Col) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
     "    )\n",
     "    print(\n",
-    "        f'\\t\\tNumber of daily stations with more than 20 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasMoreThan20) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
+    "        f'\\t\\tNumber of daily stations with at least 15 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasLessThan15Col) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
+    "    )\n",
+    "\n",
+    "    print(\n",
+    "        f'\\t\\tNumber of hourly stations with at least 20 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasLessThan20Col) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
+    "    )\n",
+    "    print(\n",
+    "        f'\\t\\tNumber of daily stations with at least 20 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasLessThan20Col) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
+    "    )\n",
+    "\n",
+    "    print(\n",
+    "        f'\\t\\tNumber of hourly stations with more than 20 years of data: {len(coloredHlyStations[(coloredHlyStations[\"color\"] == hasMoreThan20Col) & (coloredHlyStations[\"district\"] == currDistrict)])}'\n",
+    "    )\n",
+    "    print(\n",
+    "        f'\\t\\tNumber of daily stations with more than 20 years of data: {len(coloredDlyStations[(coloredDlyStations[\"color\"] == hasMoreThan20Col) & (coloredDlyStations[\"district\"] == currDistrict)])}\\n'\n",
     "    )\n",
     "\n",
     "    print(\n",
