updated comments and fixed DataService typing error

--- a/src/WeatherStation/StationVisualization.ipynb
+++ b/src/WeatherStation/StationVisualization.ipynb
@@ -24,9 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MB_CUTOFF_ELEVATION = 300 + 50\n",
-    "SK_CUTOFF_ELEVATION = 610 + 50\n",
-    "AB_CUTOFF_ELEVATION = 800 + 50\n",
+    "MB_CUTOFF_ELEVATION = 300 + 50  # the average elevation for MB in m plus a 50m buffer\n",
+    "SK_CUTOFF_ELEVATION = 610 + 50  # the average elevation for SK in m plus a 50m buffer\n",
+    "AB_CUTOFF_ELEVATION = 800 + 50  # the average elevation for AB in m plus a 50m buffer\n",
     "\n",
     "load_dotenv()\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
@@ -45,9 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = DataService(\n",
-    "    PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW\n",
-    ")  # Handles connections to the database\n",
+    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)  # type: ignore\n",
     "conn = db.connect()"
    ]
   },
