--- a/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
@@ -15,7 +15,7 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from DataService import DataService  # type: ignore"
+    "from DataService import DataService"
    ]
   },
   {
