--- a/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
+++ b/src/soilMoistureAggregation/soilMoistureAggregation.ipynb
@@ -18,7 +18,7 @@
     "import matplotlib.pyplot as plt  # type: ignore\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService  # type: ignore"
+    "from Shared.DataService import DataService "
    ]
   },
   {
