--- a/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullSampleMoistureData.ipynb
@@ -15,7 +15,7 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from DataService import DataService"
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -194,7 +194,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
