code now satisfies linter
code now satisfies linter

--- a/src/ImportErgot/aggregateErgot.ipynb
+++ b/src/ImportErgot/aggregateErgot.ipynb
@@ -13,7 +13,7 @@
     "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService  # type: ignore"
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -38,7 +38,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()"
    ]
   },
