added images, updated readme and the stationVisualization script
added images, updated readme and the stationVisualization script

added images, updated readme and the stationVisualization script

added images, updated readme and the stationVisualization script

--- a/src/WeatherStation/StationVisualization.ipynb
+++ b/src/WeatherStation/StationVisualization.ipynb
@@ -15,7 +15,7 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService  # type: ignore"
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -33,10 +33,7 @@
     "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
-    "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
-    "\n",
-    "if PG_PORT is None:\n",
-    "    sys.exit(\"Error: Could not find the port for the database.\")"
+    "PG_PORT = os.getenv(\"POSTGRES_PORT\")"
    ]
   },
   {
@@ -45,7 +42,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)  # type: ignore\n",
+    "if (\n",
+    "    PG_DB is None\n",
+    "    or PG_ADDR is None\n",
+    "    or PG_PORT is None\n",
+    "    or PG_USER is None\n",
+    "    or PG_PW is None\n",
+    "):\n",
+    "    raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "# Handles connections to the database\n",
+    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()"
    ]
   },
