--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -177,9 +177,8 @@
     "# figure out the date range for date processing - puts all 365 days as MO-DA into dates\n",
     "dates = []  # all 365 days as MO-DA - strings\n",
     "\n",
-    "months = [\n",
-    "    str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)\n",
-    "]  # the month range we want to pull data from - strings\n",
+    "# the month range we want to pull data from - strings\n",
+    "months = [str(month) for month in range(MIN_MONTH, MAX_MONTH + 1)]\n",
     "for month in months:\n",
     "    if len(month) == 1:\n",
     "        month = \"0\" + month\n",
@@ -200,9 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "years = [\n",
-    "    year for year in range(MIN_YEAR, MAX_YEAR + 1)\n",
-    "]  # the year range we want to pull data from - ints\n",
+    "# the year range we want to pull data from - ints\n",
+    "years = [year for year in range(MIN_YEAR, MAX_YEAR + 1)]\n",
     "uniqueDistricts = stationData[\"district\"].unique()\n",
     "\n",
     "cols = agg_df.columns.tolist()  # type: ignore\n",
@@ -216,9 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "listForDF = (\n",
-    "    []\n",
-    ")  # loads all data where each row is its own dictionary so that it may added to a dataframe later (fast processing)\n",
+    "# loads all data where each row is its own dictionary so that it may added to a dataframe later (fast processing)\n",
+    "listForDF = []\n",
     "\n",
     "for year in years:\n",
     "    print(f\"Processing year: {year}\")\n",
@@ -230,26 +227,23 @@
     "        currData[\"year\"] = year\n",
     "        currData[\"district\"] = district\n",
     "\n",
-    "        for (\n",
-    "            date\n",
-    "        ) in (\n",
-    "            dates\n",
-    "        ):  # for each day we want to grab all attributes and establish them as columns i.e MO-DA:attribute\n",
-    "            fullDate = np.datetime64(\n",
-    "                f\"{str(year)}-{date}\"\n",
-    "            )  # calculates the date we are current processing\n",
+    "        # for each day we want to grab all attributes and establish them as columns i.e MO-DA:attribute\n",
+    "        for date in dates:\n",
+    "            # calculates the date we are current processing\n",
+    "            fullDate = np.datetime64(f\"{str(year)}-{date}\")\n",
+    "\n",
+    "            # grab the row from the aggregated df\n",
     "            currRow = agg_df.loc[\n",
     "                (agg_df[\"date\"] == fullDate) & (agg_df[\"district\"] == district)\n",
-    "            ]  # grab the row from the aggregated df\n",
+    "            ]\n",
     "\n",
     "            for col in cols:  # parse each of the desired columns\n",
     "                currAttr = f\"{date}:{col}\"  # the current attribute which corresponds to the date and the column\n",
     "                currVal = 0  # defaults as zero incase it does not exist\n",
     "\n",
     "                if len(currRow[col]) == 1:\n",
-    "                    currVal = currRow[\n",
-    "                        col\n",
-    "                    ].item()  # the current value from the loaded data\n",
+    "                    # the current value from the loaded data\n",
+    "                    currVal = currRow[col].item()\n",
     "\n",
     "                currData[currAttr] = currVal\n",
     "\n",
