--- a/src/ImportErgot/aggregateErgot.ipynb
+++ b/src/ImportErgot/aggregateErgot.ipynb
@@ -38,17 +38,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (\n",
-    "    PG_DB is None\n",
-    "    or PG_ADDR is None\n",
-    "    or PG_PORT is None\n",
-    "    or PG_USER is None\n",
-    "    or PG_PW is None\n",
-    "):\n",
-    "    raise ValueError(\"Environment variables not set\")\n",
+    "def pullAgRegions(conn: sq.engine.Connection) -> gpd.GeoDataFrame:\n",
+    "    regionQuery = sq.text(\"select car_uid, geometry FROM public.census_ag_regions\")\n",
     "\n",
-    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "conn = db.connect()"
+    "    return gpd.GeoDataFrame.from_postgis(\n",
+    "        regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    "    )"
    ]
   },
   {
@@ -57,10 +52,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regionQuery = sq.text(\"select car_uid, geometry FROM public.census_ag_regions\")\n",
-    "agRegions = gpd.GeoDataFrame.from_postgis(\n",
-    "    regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
-    ")"
+    "def pullErgot(conn: sq.engine.Connection) -> pd.DataFrame:\n",
+    "    ergotQuery = sq.text(\"SELECT * FROM public.ergot_sample\")\n",
+    "\n",
+    "    return pd.read_sql_query(ergotQuery, conn)"
    ]
   },
   {
@@ -69,8 +64,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ergotQuery = sq.text(\"SELECT * FROM public.ergot_sample\")\n",
-    "ergot = pd.read_sql_query(ergotQuery, conn)"
+    "def calcUIDs(ergot: pd.DataFrame) -> pd.DataFrame:\n",
+    "    ergot.loc[ergot[\"province\"] == \"MB\", \"car_uid\"] = (\n",
+    "        ergot.loc[ergot[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
+    "    )\n",
+    "    ergot.loc[ergot[\"province\"] == \"SK\", \"car_uid\"] = (\n",
+    "        ergot.loc[ergot[\"province\"] == \"SK\", \"crop_district\"] - 1\n",
+    "    ) + 4700\n",
+    "    ergot.loc[ergot[\"province\"] == \"AB\", \"car_uid\"] = (\n",
+    "        ergot.loc[ergot[\"province\"] == \"AB\", \"crop_district\"] * 10\n",
+    "    ) + 4800\n",
+    "\n",
+    "    ergot[[\"car_uid\"]] = ergot[[\"car_uid\"]].astype(int)\n",
+    "\n",
+    "    return ergot"
    ]
   },
   {
@@ -79,18 +86,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate the car_uid\n",
-    "ergot.loc[ergot[\"province\"] == \"MB\", \"car_uid\"] = (\n",
-    "    ergot.loc[ergot[\"province\"] == \"MB\", \"crop_district\"] + 4600\n",
-    ")\n",
-    "ergot.loc[ergot[\"province\"] == \"SK\", \"car_uid\"] = (\n",
-    "    ergot.loc[ergot[\"province\"] == \"SK\", \"crop_district\"] - 1\n",
-    ") + 4700\n",
-    "ergot.loc[ergot[\"province\"] == \"AB\", \"car_uid\"] = (\n",
-    "    ergot.loc[ergot[\"province\"] == \"AB\", \"crop_district\"] * 10\n",
-    ") + 4800\n",
+    "def calcNeighbors(agRegions: gpd.GeoDataFrame) -> dict:\n",
+    "    touches = {}\n",
     "\n",
-    "ergot[[\"car_uid\"]] = ergot[[\"car_uid\"]].astype(int)"
+    "    for index1, agRegion1 in agRegions.iterrows():\n",
+    "        currTouches = []\n",
+    "\n",
+    "        for index2, agRegion2 in agRegions.iterrows():\n",
+    "            if agRegion1[\"geometry\"].touches(agRegion2[\"geometry\"]):\n",
+    "                currTouches.append(agRegion2[\"car_uid\"])\n",
+    "\n",
+    "        touches[str(agRegion1[\"car_uid\"])] = currTouches\n",
+    "\n",
+    "    return touches"
    ]
   },
   {
@@ -99,16 +107,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "touches = {}\n",
+    "def createErgotFeatures(ergot: pd.DataFrame, touches: gpd.GeoDataFrame) -> pd.DataFrame:\n",
+    "    ergot[\"percnt_true\"] = None\n",
+    "    ergot[\"has_ergot\"] = False\n",
+    "    ergot[\"sum_severity\"] = 0\n",
     "\n",
-    "for index1, agRegion1 in agRegions.iterrows():\n",
-    "    currTouches = []\n",
+    "    ergot[\"present_prev1\"] = False\n",
+    "    ergot[\"present_prev2\"] = False\n",
+    "    ergot[\"present_prev3\"] = False\n",
+    "    ergot[\"present_in_neighbor\"] = False\n",
     "\n",
-    "    for index2, agRegion2 in agRegions.iterrows():\n",
-    "        if agRegion1[\"geometry\"].touches(agRegion2[\"geometry\"]):\n",
-    "            currTouches.append(agRegion2[\"car_uid\"])\n",
+    "    ergot[\"severity_prev1\"] = 0\n",
+    "    ergot[\"severity_prev2\"] = 0\n",
+    "    ergot[\"severity_prev3\"] = 0\n",
+    "    ergot[\"severity_in_neighbor\"] = 0\n",
     "\n",
-    "    touches[str(agRegion1[\"car_uid\"])] = currTouches"
+    "    for year in ergot[\"year\"].unique():\n",
+    "        for uid in ergot[\"car_uid\"].unique():\n",
+    "            # load the current ag_region samples\n",
+    "            currSamples = ergot.query(f\"year == {year} and car_uid == {uid}\")\n",
+    "\n",
+    "            # load the neighbors samples\n",
+    "            neighborSamples = ergot.query(\n",
+    "                f\"year == {year} and car_uid in {touches[str(uid)]}\"\n",
+    "            )\n",
+    "\n",
+    "            # load last years samples\n",
+    "            prev1Year = ergot.query(f\"year == {year - 1} and car_uid == {uid}\")\n",
+    "\n",
+    "            # load the samples from 2 years ago\n",
+    "            prev2Year = ergot.query(f\"year == {year - 2} and car_uid == {uid}\")\n",
+    "\n",
+    "            # load the samples from 3 years ago\n",
+    "            prev3Year = ergot.query(f\"year == {year - 3} and car_uid == {uid}\")\n",
+    "\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"percnt_true\"\n",
+    "            ] = currSamples[\"incidence\"].sum() / len(currSamples.index)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"has_ergot\"\n",
+    "            ] = (currSamples[\"incidence\"].sum() > 0)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"sum_severity\"\n",
+    "            ] = currSamples[\"severity\"].sum()\n",
+    "\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev1\"\n",
+    "            ] = (prev1Year[\"incidence\"].sum() > 0)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev2\"\n",
+    "            ] = (prev2Year[\"incidence\"].sum() > 0)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev3\"\n",
+    "            ] = (prev3Year[\"incidence\"].sum() > 0)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid),\n",
+    "                \"present_in_neighbor\",\n",
+    "            ] = (\n",
+    "                neighborSamples[\"incidence\"].sum() > 0\n",
+    "            )\n",
+    "\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev1\"\n",
+    "            ] = prev1Year[\"incidence\"].sum() / len(prev1Year.index)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev2\"\n",
+    "            ] = prev2Year[\"incidence\"].sum() / len(prev2Year.index)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev3\"\n",
+    "            ] = prev3Year[\"incidence\"].sum() / len(prev3Year.index)\n",
+    "            ergot.loc[\n",
+    "                (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid),\n",
+    "                \"severity_in_neighbor\",\n",
+    "            ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples.index)\n",
+    "\n",
+    "    # set any unexpected values to 0\n",
+    "    ergot.loc[ergot[\"severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
+    "    ergot.loc[ergot[\"severity_prev2\"].isna(), \"severity_prev2\"] = 0\n",
+    "    ergot.loc[ergot[\"severity_prev3\"].isna(), \"severity_prev3\"] = 0\n",
+    "    ergot.loc[ergot[\"severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0\n",
+    "\n",
+    "    return ergot"
    ]
   },
   {
@@ -117,19 +196,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ergot[\"percnt_true\"] = None\n",
-    "ergot[\"has_ergot\"] = False\n",
-    "ergot[\"sum_severity\"] = 0\n",
+    "def main():\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
     "\n",
-    "ergot[\"present_prev1\"] = False\n",
-    "ergot[\"present_prev2\"] = False\n",
-    "ergot[\"present_prev3\"] = False\n",
-    "ergot[\"present_in_neighbor\"] = False\n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    conn = db.connect()\n",
     "\n",
-    "ergot[\"severity_prev1\"] = 0\n",
-    "ergot[\"severity_prev2\"] = 0\n",
-    "ergot[\"severity_prev3\"] = 0\n",
-    "ergot[\"severity_in_neighbor\"] = 0"
+    "    agRegions = pullAgRegions(conn)\n",
+    "    ergot = pullErgot(conn)\n",
+    "\n",
+    "    ergot = calcUIDs(ergot)\n",
+    "    neighbors = calcNeighbors(agRegions)\n",
+    "    ergot = createErgotFeatures(ergot, neighbors)\n",
+    "\n",
+    "    ergot.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    db.cleanup()"
    ]
   },
   {
@@ -138,99 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for year in ergot[\"year\"].unique():\n",
-    "    for uid in ergot[\"car_uid\"].unique():\n",
-    "        currSamples = ergot.query(\n",
-    "            f\"year == {year} and car_uid == {uid}\"\n",
-    "        )  # load the current ag_region samples\n",
-    "        neighborSamples = ergot.query(\n",
-    "            f\"year == {year} and car_uid in {touches[str(uid)]}\"\n",
-    "        )  # load the neighbors samples\n",
-    "        prev1Year = ergot.query(\n",
-    "            f\"year == {year - 1} and car_uid == {uid}\"\n",
-    "        )  # load last years samples\n",
-    "        prev2Year = ergot.query(\n",
-    "            f\"year == {year - 2} and car_uid == {uid}\"\n",
-    "        )  # load the samples from 2 years ago\n",
-    "        prev3Year = ergot.query(\n",
-    "            f\"year == {year - 3} and car_uid == {uid}\"\n",
-    "        )  # load the samples from 3 years ago\n",
-    "\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"percnt_true\"\n",
-    "        ] = currSamples[\"incidence\"].sum() / len(currSamples.index)\n",
-    "        ergot.loc[(ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"has_ergot\"] = (\n",
-    "            currSamples[\"incidence\"].sum() > 0\n",
-    "        )\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"sum_severity\"\n",
-    "        ] = currSamples[\"severity\"].sum()\n",
-    "\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev1\"\n",
-    "        ] = (prev1Year[\"incidence\"].sum() > 0)\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev2\"\n",
-    "        ] = (prev2Year[\"incidence\"].sum() > 0)\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_prev3\"\n",
-    "        ] = (prev3Year[\"incidence\"].sum() > 0)\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"present_in_neighbor\"\n",
-    "        ] = (neighborSamples[\"incidence\"].sum() > 0)\n",
-    "\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev1\"\n",
-    "        ] = prev1Year[\"incidence\"].sum() / len(prev1Year.index)\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev2\"\n",
-    "        ] = prev2Year[\"incidence\"].sum() / len(prev2Year.index)\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_prev3\"\n",
-    "        ] = prev3Year[\"incidence\"].sum() / len(prev3Year.index)\n",
-    "        ergot.loc[\n",
-    "            (ergot[\"year\"] == year) & (ergot[\"car_uid\"] == uid), \"severity_in_neighbor\"\n",
-    "        ] = neighborSamples[\"incidence\"].sum() / len(neighborSamples.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set any unexpected values to 0\n",
-    "ergot.loc[ergot[\"severity_prev1\"].isna(), \"severity_prev1\"] = 0\n",
-    "ergot.loc[ergot[\"severity_prev2\"].isna(), \"severity_prev2\"] = 0\n",
-    "ergot.loc[ergot[\"severity_prev3\"].isna(), \"severity_prev3\"] = 0\n",
-    "ergot.loc[ergot[\"severity_in_neighbor\"].isna(), \"severity_in_neighbor\"] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ergot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ergot.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.cleanup()"
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
